Bug 201987 - GPE 0X66 keeps on firing in late suspend phase, thus break suspend-to-idle - HP Zhan 66
Summary: GPE 0X66 keeps on firing in late suspend phase, thus break suspend-to-idle - ...
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: Intel Linux
: P1 normal
Assignee: Rafael J. Wysocki
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-13 16:24 UTC by Zhang Rui
Modified: 2019-01-02 22:21 UTC (History)
1 user (show)

See Also:
Kernel Version: v4.19
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
pm-graph output on HP Zhan 66 laptop, with kernel 4.20-rc4 (1.91 MB, text/html)
2018-12-13 16:24 UTC, Zhang Rui
Details
ACPI / PM: s2idle: Disable non-wakeup GPEs on suspend (2.43 KB, patch)
2018-12-13 17:19 UTC, Rafael J. Wysocki
Details | Diff

Description Zhang Rui 2018-12-13 16:24:01 UTC
Created attachment 279997 [details]
pm-graph output on HP Zhan 66 laptop, with kernel 4.20-rc4

On a HP KBL-R platform, model name Zhan 66, it is found that the system can not enter deep c state during suspend-to-idle.

And the rootcause is that GPE 0X66 keeps on firing in the suspend_noirq phase, causing the system keeps on waking up to handle the ACPI interrupt. Thus, s2idle_enter() is never invoked in s2idle_loop().
Comment 1 Rafael J. Wysocki 2018-12-13 17:19:53 UTC
Created attachment 280001 [details]
ACPI / PM: s2idle: Disable non-wakeup GPEs on suspend

Please try this patch on the affected system.
Comment 2 Rafael J. Wysocki 2018-12-17 11:28:11 UTC
There is a new version of the patch to test at:

https://patchwork.kernel.org/patch/10733155/
Comment 3 Zhang Rui 2018-12-17 17:04:44 UTC
yes, I have tested the patches and they indeed fix the problem on this platform.
Comment 4 Rafael J. Wysocki 2018-12-18 09:38:46 UTC
Thanks!
Comment 5 Rafael J. Wysocki 2019-01-02 22:21:48 UTC
Fix merged as commit f941d3e41da7 (ACPI: EC / PM: Disable non-wakeup GPEs for suspend-to-idle).

Note You need to log in before you can comment on or make changes to this bug.